# oxc-modernize

./: .gitignore  Cargo.toml  README.md
crates/oxc-modernize-core/: Cargo.toml
crates/oxc-modernize-core/src/: lib.rs  variable_transformer.rs
