[workspace]
members = [
    "crates/*",
]

[workspace.dependencies]
oxc_allocator = "0.90.0"
oxc_ast = "0.90.0"
oxc_ast_visit = "0.90.0"
oxc_codegen = "0.90.0"
oxc_parser = "0.90.0"
oxc_semantic = "0.90.0"
oxc_span = "0.90.0"
oxc_traverse = "0.90.0"
oxc_transformer = "0.90.0"

serde_json = "1.0.145"